// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ZonesView.vue renders snapshot when multizone 1`] = `
<div>
  <div
    class="zones"
  >
    <div
      class="component-frame"
    >
      <div
        class="data-overview"
        data-testid="data-overview"
      >
        <div
          class="data-table-controls mb-2"
        >
           
          <button
            class="k-button ml-2 refresh-button small rounded primary"
            data-v-6ae23500=""
            type="button"
          >
            <!---->
            <div
              class="refresh-icon"
              data-v-6ae23500=""
            >
              <svg
                data-v-6ae23500=""
                viewBox="0 0 36 36"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  data-v-6ae23500=""
                  fill="#fff"
                  fill-rule="nonzero"
                >
                  <path
                    d="M18 5.5a12.465 12.465 0 00-8.118 2.995 1.5 1.5 0 001.847 2.363l.115-.095A9.437 9.437 0 0118 8.5l.272.004a9.487 9.487 0 019.07 7.75l.04.246H25a.5.5 0 00-.416.777l4 6a.5.5 0 00.832 0l4-6 .04-.072A.5.5 0 0033 16.5h-2.601l-.017-.15C29.567 10.2 24.294 5.5 18 5.5zM2.584 18.723l-.04.072A.5.5 0 003 19.5h2.6l.018.15C6.433 25.8 11.706 30.5 18 30.5c3.013 0 5.873-1.076 8.118-2.995a1.5 1.5 0 00-1.847-2.363l-.115.095A9.437 9.437 0 0118 27.5l-.272-.004a9.487 9.487 0 01-9.07-7.75l-.041-.246H11a.5.5 0 00.416-.777l-4-6a.5.5 0 00-.832 0l-4 6z"
                    data-v-6ae23500=""
                  />
                </g>
              </svg>
            </div>
             
            <span
              data-v-6ae23500=""
            >
              Refresh
            </span>
            <!---->
          </button>
        </div>
         
        <div
          class="data-overview-content"
        >
          <div
            class="data-overview-table"
          >
            <table
              class="k-table k-table-legacy micro-table has-hover is-clickable"
              data-v-1fe39162=""
            >
              <thead
                data-v-1fe39162=""
              >
                <tr
                  data-v-1fe39162=""
                >
                  <th
                    class=""
                    data-v-1fe39162=""
                  >
                    <span
                      class="sr-only"
                      data-v-1fe39162=""
                    >
                       actions 
                    </span>
                  </th>
                  <th
                    class=""
                    data-v-1fe39162=""
                  >
                    <span
                      class=""
                      data-v-1fe39162=""
                    >
                       Status 
                    </span>
                  </th>
                  <th
                    class=""
                    data-v-1fe39162=""
                  >
                    <span
                      class=""
                      data-v-1fe39162=""
                    >
                       Name 
                    </span>
                  </th>
                  <th
                    class=""
                    data-v-1fe39162=""
                  >
                    <span
                      class=""
                      data-v-1fe39162=""
                    >
                       Zone CP Version 
                    </span>
                  </th>
                  <th
                    class=""
                    data-v-1fe39162=""
                  >
                    <span
                      class=""
                      data-v-1fe39162=""
                    >
                       Backend 
                    </span>
                  </th>
                  <th
                    class=""
                    data-v-1fe39162=""
                  >
                    <span
                      class=""
                      data-v-1fe39162=""
                    >
                       Ingress 
                    </span>
                  </th>
                  <th
                    class=""
                    data-v-1fe39162=""
                  >
                    <span
                      class=""
                      data-v-1fe39162=""
                    >
                       Egress 
                    </span>
                  </th>
                  <th
                    class=""
                    data-v-1fe39162=""
                  >
                    <span
                      class="sr-only"
                      data-v-1fe39162=""
                    >
                       warnings 
                    </span>
                  </th>
                </tr>
              </thead>
              <tbody
                data-v-1fe39162=""
              >
                <tr
                  data-v-1fe39162=""
                >
                  <td
                    data-v-1fe39162=""
                  >
                    <a
                      class="data-table-action-link is-active"
                      data-v-1fe39162=""
                    >
                      <span
                        class="action-link__active-state"
                        data-v-1fe39162=""
                      >
                        
              ✓
              
                        <span
                          class="sr-only"
                          data-v-1fe39162=""
                        >
                          
                Selected
              
                        </span>
                      </span>
                    </a>
                  </td>
                  <td
                    data-v-1fe39162=""
                  >
                    <div
                      class="entity-status"
                      data-v-1fe39162=""
                    >
                      <span
                        class="entity-status__dot"
                        data-v-1fe39162=""
                      />
                       
                      <span
                        class="entity-status__label"
                        data-v-1fe39162=""
                      >
                        Online
                      </span>
                    </div>
                  </td>
                  <td
                    data-v-1fe39162=""
                  >
                    cluster-1
                  </td>
                  <td
                    data-v-1fe39162=""
                  >
                    1.0.0-rc2-211-g823fe8ce
                  </td>
                  <td
                    data-v-1fe39162=""
                  >
                    memory
                  </td>
                  <td
                    data-v-1fe39162=""
                  >
                    No
                  </td>
                  <td
                    data-v-1fe39162=""
                  >
                    No
                  </td>
                  <td
                    data-v-1fe39162=""
                  >
                    <span
                      class="kong-icon mr-1 kong-icon-warning"
                      data-v-1fe39162=""
                      data-v-429cf642=""
                    >
                      <svg
                        height="20"
                        role="img"
                        version="1.1"
                        viewBox="0 0 48 42"
                        width="20"
                        xmlns="http://www.w3.org/2000/svg"
                        xmlns:xlink="http://www.w3.org/1999/xlink"
                      >
                        
  
                        <title>
                          Warning
                        </title>
                        
  
                        <g
                          fill="var(--black-75)"
                          fill-rule="evenodd"
                          id="Page-1"
                          stroke="none"
                          stroke-width="1"
                        >
                          
    
                          <g
                            id="icn-warning-64x"
                          >
                            
      
                            <path
                              d="M25.129733,2.64556484 C25.0166566,2.45204254 24.8546193,2.29069544 24.6593031,2.17754095 C24.0339615,1.81525556 23.2314423,2.02651215 22.8697255,2.64556484 L2.17517915,38.0628158 C2.06036961,38.2593042 2,38.4821557 2,38.7088951 C2,39.4200371 2.58244376,40 3.30518292,40 L44.6942755,40 C44.9262204,40 45.1538685,39.9388552 45.3538494,39.8229983 C45.9741835,39.4636139 46.1830669,38.6768553 45.8242793,38.0628158 L25.129733,2.64556484 Z M26.8565586,1.63656862 L47.5511049,37.0538196 C48.4690879,38.6248825 47.9342141,40.6394832 46.3564308,41.5535561 C45.8517121,41.8459599 45.2782053,42 44.6942755,42 L3.30518292,42 C1.4797808,42 3.66949018e-16,40.5265221 0,38.7088951 C0,38.1274525 0.154699044,37.5563885 0.448353557,37.0538196 L21.1428999,1.63656862 C22.0608829,0.0655056975 24.0841012,-0.467089888 25.6618845,0.446983085 C26.1568841,0.733756171 26.5685588,1.14367738 26.8565586,1.63656862 Z"
                              fill="var(--black-75)"
                              fill-rule="nonzero"
                              id="Triangle"
                            />
                            
      
                            <path
                              d="M25.129733,2.64556484 C25.0166566,2.45204254 24.8546193,2.29069544 24.6593031,2.17754095 C24.0339615,1.81525556 23.2314423,2.02651215 22.8697255,2.64556484 L2.17517915,38.0628158 C2.06036961,38.2593042 2,38.4821557 2,38.7088951 C2,39.4200371 2.58244376,40 3.30518292,40 L44.6942755,40 C44.9262204,40 45.1538685,39.9388552 45.3538494,39.8229983 C45.9741835,39.4636139 46.1830669,38.6768553 45.8242793,38.0628158 L25.129733,2.64556484 Z"
                              fill="var(--yellow-300)"
                              fill-rule="nonzero"
                              id="Path"
                              type="secondary"
                            />
                            
      
                            <path
                              d="M23,13 L25,13 C25.5522847,13 26,13.4477153 26,14 C26,16 26,18 26,20 C26,22.6594889 25.7904331,25.0570193 25.3712994,27.192591 C25.2792336,27.6616739 24.8680521,28 24.3900199,28 L23.6099609,27.9999816 C23.1319364,27.9999816 22.7207615,27.6616608 22.6286994,27.1925851 C22.2095665,25.0570148 22,22.6594864 22,20 C22,18 22,16 22,14 C22,13.4477153 22.4477153,13 23,13 Z M24,31 C25.1045695,31 26,31.8954305 26,33 C26,34.1045695 25.1045695,35 24,35 C22.8954305,35 22,34.1045695 22,33 C22,31.8954305 22.8954305,31 24,31 Z"
                              fill="var(--black-75)"
                              id="!"
                            />
                            
    
                          </g>
                          
  
                        </g>
                        

                      </svg>
                      

                    </span>
                  </td>
                </tr>
                <tr
                  data-v-1fe39162=""
                >
                  <td
                    data-v-1fe39162=""
                  >
                    <a
                      class="data-table-action-link"
                      data-v-1fe39162=""
                    >
                      <span
                        class="action-link__normal-state"
                        data-v-1fe39162=""
                      >
                        
              View
            
                      </span>
                    </a>
                  </td>
                  <td
                    data-v-1fe39162=""
                  >
                    <div
                      class="entity-status"
                      data-v-1fe39162=""
                    >
                      <span
                        class="entity-status__dot"
                        data-v-1fe39162=""
                      />
                       
                      <span
                        class="entity-status__label"
                        data-v-1fe39162=""
                      >
                        Online
                      </span>
                    </div>
                  </td>
                  <td
                    data-v-1fe39162=""
                  >
                    zone-1
                  </td>
                  <td
                    data-v-1fe39162=""
                  >
                    1.0.0-rc2-211-g823fe8ce
                  </td>
                  <td
                    data-v-1fe39162=""
                  >
                    memory
                  </td>
                  <td
                    data-v-1fe39162=""
                  >
                    Yes
                  </td>
                  <td
                    data-v-1fe39162=""
                  >
                    Yes
                  </td>
                  <td
                    data-v-1fe39162=""
                  >
                    <div
                      data-v-1fe39162=""
                    />
                  </td>
                </tr>
                <tr
                  data-v-1fe39162=""
                >
                  <td
                    data-v-1fe39162=""
                  >
                    <a
                      class="data-table-action-link"
                      data-v-1fe39162=""
                    >
                      <span
                        class="action-link__normal-state"
                        data-v-1fe39162=""
                      >
                        
              View
            
                      </span>
                    </a>
                  </td>
                  <td
                    data-v-1fe39162=""
                  >
                    <div
                      class="entity-status"
                      data-v-1fe39162=""
                    >
                      <span
                        class="entity-status__dot"
                        data-v-1fe39162=""
                      />
                       
                      <span
                        class="entity-status__label"
                        data-v-1fe39162=""
                      >
                        Online
                      </span>
                    </div>
                  </td>
                  <td
                    data-v-1fe39162=""
                  >
                    zone-2
                  </td>
                  <td
                    data-v-1fe39162=""
                  >
                    1.0.0-rc2-211-g823fe8ce
                  </td>
                  <td
                    data-v-1fe39162=""
                  >
                    memory
                  </td>
                  <td
                    data-v-1fe39162=""
                  >
                    No
                  </td>
                  <td
                    data-v-1fe39162=""
                  >
                    No
                  </td>
                  <td
                    data-v-1fe39162=""
                  >
                    <span
                      class="kong-icon mr-1 kong-icon-warning"
                      data-v-1fe39162=""
                      data-v-429cf642=""
                    >
                      <svg
                        height="20"
                        role="img"
                        version="1.1"
                        viewBox="0 0 48 42"
                        width="20"
                        xmlns="http://www.w3.org/2000/svg"
                        xmlns:xlink="http://www.w3.org/1999/xlink"
                      >
                        
  
                        <title>
                          Warning
                        </title>
                        
  
                        <g
                          fill="var(--black-75)"
                          fill-rule="evenodd"
                          id="Page-1"
                          stroke="none"
                          stroke-width="1"
                        >
                          
    
                          <g
                            id="icn-warning-64x"
                          >
                            
      
                            <path
                              d="M25.129733,2.64556484 C25.0166566,2.45204254 24.8546193,2.29069544 24.6593031,2.17754095 C24.0339615,1.81525556 23.2314423,2.02651215 22.8697255,2.64556484 L2.17517915,38.0628158 C2.06036961,38.2593042 2,38.4821557 2,38.7088951 C2,39.4200371 2.58244376,40 3.30518292,40 L44.6942755,40 C44.9262204,40 45.1538685,39.9388552 45.3538494,39.8229983 C45.9741835,39.4636139 46.1830669,38.6768553 45.8242793,38.0628158 L25.129733,2.64556484 Z M26.8565586,1.63656862 L47.5511049,37.0538196 C48.4690879,38.6248825 47.9342141,40.6394832 46.3564308,41.5535561 C45.8517121,41.8459599 45.2782053,42 44.6942755,42 L3.30518292,42 C1.4797808,42 3.66949018e-16,40.5265221 0,38.7088951 C0,38.1274525 0.154699044,37.5563885 0.448353557,37.0538196 L21.1428999,1.63656862 C22.0608829,0.0655056975 24.0841012,-0.467089888 25.6618845,0.446983085 C26.1568841,0.733756171 26.5685588,1.14367738 26.8565586,1.63656862 Z"
                              fill="var(--black-75)"
                              fill-rule="nonzero"
                              id="Triangle"
                            />
                            
      
                            <path
                              d="M25.129733,2.64556484 C25.0166566,2.45204254 24.8546193,2.29069544 24.6593031,2.17754095 C24.0339615,1.81525556 23.2314423,2.02651215 22.8697255,2.64556484 L2.17517915,38.0628158 C2.06036961,38.2593042 2,38.4821557 2,38.7088951 C2,39.4200371 2.58244376,40 3.30518292,40 L44.6942755,40 C44.9262204,40 45.1538685,39.9388552 45.3538494,39.8229983 C45.9741835,39.4636139 46.1830669,38.6768553 45.8242793,38.0628158 L25.129733,2.64556484 Z"
                              fill="var(--yellow-300)"
                              fill-rule="nonzero"
                              id="Path"
                              type="secondary"
                            />
                            
      
                            <path
                              d="M23,13 L25,13 C25.5522847,13 26,13.4477153 26,14 C26,16 26,18 26,20 C26,22.6594889 25.7904331,25.0570193 25.3712994,27.192591 C25.2792336,27.6616739 24.8680521,28 24.3900199,28 L23.6099609,27.9999816 C23.1319364,27.9999816 22.7207615,27.6616608 22.6286994,27.1925851 C22.2095665,25.0570148 22,22.6594864 22,20 C22,18 22,16 22,14 C22,13.4477153 22.4477153,13 23,13 Z M24,31 C25.1045695,31 26,31.8954305 26,33 C26,34.1045695 25.1045695,35 24,35 C22.8954305,35 22,34.1045695 22,33 C22,31.8954305 22.8954305,31 24,31 Z"
                              fill="var(--black-75)"
                              id="!"
                            />
                            
    
                          </g>
                          
  
                        </g>
                        

                      </svg>
                      

                    </span>
                  </td>
                </tr>
                <tr
                  data-v-1fe39162=""
                >
                  <td
                    data-v-1fe39162=""
                  >
                    <a
                      class="data-table-action-link"
                      data-v-1fe39162=""
                    >
                      <span
                        class="action-link__normal-state"
                        data-v-1fe39162=""
                      >
                        
              View
            
                      </span>
                    </a>
                  </td>
                  <td
                    data-v-1fe39162=""
                  >
                    <div
                      class="entity-status"
                      data-v-1fe39162=""
                    >
                      <span
                        class="entity-status__dot"
                        data-v-1fe39162=""
                      />
                       
                      <span
                        class="entity-status__label"
                        data-v-1fe39162=""
                      >
                        Online
                      </span>
                    </div>
                  </td>
                  <td
                    data-v-1fe39162=""
                  >
                    zone-3
                  </td>
                  <td
                    data-v-1fe39162=""
                  >
                    1.0.0-rc2-211-g823fe8ce
                  </td>
                  <td
                    data-v-1fe39162=""
                  >
                    
                  </td>
                  <td
                    data-v-1fe39162=""
                  >
                    No
                  </td>
                  <td
                    data-v-1fe39162=""
                  >
                    No
                  </td>
                  <td
                    data-v-1fe39162=""
                  >
                    <div
                      data-v-1fe39162=""
                    />
                  </td>
                </tr>
              </tbody>
            </table>
             
            <div
              class="pagination"
            >
              <!---->
               
              <!---->
            </div>
          </div>
           
          <!---->
           
          <!---->
        </div>
         
        <!---->
         
        <!---->
      </div>
       
      <div
        class="tab-container"
        data-testid="tab-container"
      >
        <header
          class="tab__header"
        >
          <div>
            <h3>
               Zone: cluster-1
            </h3>
          </div>
           
          <div>
            <div
              data-testid="entity-url-control"
            >
              <div
                aria-controls="aaaabbbb-cccc-dddd-eeee-ffffffffffff"
                data-v-6b00e241=""
                id="aaaabbbb-cccc-dddd-eeee-ffffffffffff"
                role="button"
              >
                <button
                  class="k-button small rounded outline"
                  data-v-6ae23500=""
                  data-v-6b00e241=""
                  type="button"
                >
                  <span
                    class="kong-icon kong-icon-externalLink"
                    data-v-429cf642=""
                    data-v-6ae23500=""
                  >
                    <svg
                      height="12"
                      role="img"
                      viewBox="0 0 12 12"
                      width="12"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      
  
                      <title>
                        External Link
                      </title>
                      
  
                      <path
                        d="M8.24308 1.5C7.83269 1.5 7.5 1.16710138 7.5.75c0-.41421356.33823-.75.74308-.75h3.00568C11.6666 0 12 .336341 12 .75123866v3.00567786C12 4.1673102 11.6671 4.5 11.25 4.5c-.41421 0-.75-.3382314-.75-.74308348V2.625L6.53246 6.59254c-.28982.2898217-.76955.2953689-1.06202.0029022l-.06588-.0658844c-.29098-.2909742-.29117-.7679483.0029-1.0620178L9.375 1.5H8.24308zm-6.74753 0C.67089 1.5 0 2.1695784 0 2.99554521v7.50890959C0 11.3291147.66958 12 1.49555 12h7.5089C9.82911 12 10.5 11.3304216 10.5 10.5044548V6.75H9v3.75H1.5V3h3.75V1.5H1.49555z"
                        fill="#A3BBCC"
                        fill-rule="evenodd"
                      />
                      

                    </svg>
                    

                  </span>
                  
        Copy URL
      
                  <!---->
                </button>
                <transition-stub
                  data-v-6b00e241=""
                  name="fade"
                >
                  <div
                    class="k-popover"
                    data-v-6b00e241=""
                    id="aaaabbbb-cccc-dddd-eeee-ffffffffffff"
                    role="region"
                    style="width: 200px; max-width: 350px; max-height: auto; display: none;"
                  >
                    <!---->
                    <div
                      class="k-popover-content"
                      data-v-6b00e241=""
                    >
                      <div>
                        <p>
                          URL copied to clipboard!
                        </p>
                      </div>
                    </div>
                    <!---->
                  </div>
                </transition-stub>
              </div>
            </div>
          </div>
        </header>
         
        <div
          class="tab__content-container"
        >
          <div
            class="k-tabs"
            data-v-93b6f4ca=""
          >
            <ul
              aria-label="ktabs"
              data-v-93b6f4ca=""
              role="tablist"
            >
              <li
                aria-controls="panel-0"
                aria-selected="true"
                class="tab-item active"
                data-v-93b6f4ca=""
                id="overview-tab"
                role="tab"
                tabindex="0"
              >
                <a
                  class="tab-link"
                  data-v-93b6f4ca=""
                >
                  Overview
                </a>
              </li>
              <li
                aria-controls="panel-1"
                aria-selected="false"
                class="tab-item"
                data-v-93b6f4ca=""
                id="insights-tab"
                role="tab"
                tabindex="0"
              >
                <a
                  class="tab-link"
                  data-v-93b6f4ca=""
                >
                  Zone Insights
                </a>
              </li>
              <li
                aria-controls="panel-2"
                aria-selected="false"
                class="tab-item"
                data-v-93b6f4ca=""
                id="config-tab"
                role="tab"
                tabindex="0"
              >
                <a
                  class="tab-link"
                  data-v-93b6f4ca=""
                >
                  Config
                </a>
              </li>
              <li
                aria-controls="panel-3"
                aria-selected="false"
                class="tab-item"
                data-v-93b6f4ca=""
                id="warnings-tab"
                role="tab"
                tabindex="0"
              >
                <a
                  class="tab-link"
                  data-v-93b6f4ca=""
                >
                  <span
                    class="flex items-center with-warnings"
                    data-v-93b6f4ca=""
                  >
                    <span
                      class="kong-icon mr-1 kong-icon-warning"
                      data-v-429cf642=""
                      data-v-93b6f4ca=""
                    >
                      <svg
                        height="16"
                        role="img"
                        version="1.1"
                        viewBox="0 0 48 42"
                        width="16"
                        xmlns="http://www.w3.org/2000/svg"
                        xmlns:xlink="http://www.w3.org/1999/xlink"
                      >
                        
  
                        <title>
                          Warning
                        </title>
                        
  
                        <g
                          fill="var(--black-75)"
                          fill-rule="evenodd"
                          id="Page-1"
                          stroke="none"
                          stroke-width="1"
                        >
                          
    
                          <g
                            id="icn-warning-64x"
                          >
                            
      
                            <path
                              d="M25.129733,2.64556484 C25.0166566,2.45204254 24.8546193,2.29069544 24.6593031,2.17754095 C24.0339615,1.81525556 23.2314423,2.02651215 22.8697255,2.64556484 L2.17517915,38.0628158 C2.06036961,38.2593042 2,38.4821557 2,38.7088951 C2,39.4200371 2.58244376,40 3.30518292,40 L44.6942755,40 C44.9262204,40 45.1538685,39.9388552 45.3538494,39.8229983 C45.9741835,39.4636139 46.1830669,38.6768553 45.8242793,38.0628158 L25.129733,2.64556484 Z M26.8565586,1.63656862 L47.5511049,37.0538196 C48.4690879,38.6248825 47.9342141,40.6394832 46.3564308,41.5535561 C45.8517121,41.8459599 45.2782053,42 44.6942755,42 L3.30518292,42 C1.4797808,42 3.66949018e-16,40.5265221 0,38.7088951 C0,38.1274525 0.154699044,37.5563885 0.448353557,37.0538196 L21.1428999,1.63656862 C22.0608829,0.0655056975 24.0841012,-0.467089888 25.6618845,0.446983085 C26.1568841,0.733756171 26.5685588,1.14367738 26.8565586,1.63656862 Z"
                              fill="var(--black-75)"
                              fill-rule="nonzero"
                              id="Triangle"
                            />
                            
      
                            <path
                              d="M25.129733,2.64556484 C25.0166566,2.45204254 24.8546193,2.29069544 24.6593031,2.17754095 C24.0339615,1.81525556 23.2314423,2.02651215 22.8697255,2.64556484 L2.17517915,38.0628158 C2.06036961,38.2593042 2,38.4821557 2,38.7088951 C2,39.4200371 2.58244376,40 3.30518292,40 L44.6942755,40 C44.9262204,40 45.1538685,39.9388552 45.3538494,39.8229983 C45.9741835,39.4636139 46.1830669,38.6768553 45.8242793,38.0628158 L25.129733,2.64556484 Z"
                              fill="var(--yellow-300)"
                              fill-rule="nonzero"
                              id="Path"
                              type="secondary"
                            />
                            
      
                            <path
                              d="M23,13 L25,13 C25.5522847,13 26,13.4477153 26,14 C26,16 26,18 26,20 C26,22.6594889 25.7904331,25.0570193 25.3712994,27.192591 C25.2792336,27.6616739 24.8680521,28 24.3900199,28 L23.6099609,27.9999816 C23.1319364,27.9999816 22.7207615,27.6616608 22.6286994,27.1925851 C22.2095665,25.0570148 22,22.6594864 22,20 C22,18 22,16 22,14 C22,13.4477153 22.4477153,13 23,13 Z M24,31 C25.1045695,31 26,31.8954305 26,33 C26,34.1045695 25.1045695,35 24,35 C22.8954305,35 22,34.1045695 22,33 C22,31.8954305 22.8954305,31 24,31 Z"
                              fill="var(--black-75)"
                              id="!"
                            />
                            
    
                          </g>
                          
  
                        </g>
                        

                      </svg>
                      

                    </span>
                     
                    <span
                      data-v-93b6f4ca=""
                    >
                      
            Warnings
          
                    </span>
                  </span>
                </a>
              </li>
            </ul>
            <div
              aria-labelledby="overview-tab"
              class="tab-container"
              data-v-93b6f4ca=""
              id="panel-0"
              role="tabpanel"
              tabindex="0"
            >
              <div
                data-v-93b6f4ca=""
              >
                <div
                  class="label-list-content"
                >
                  <section
                    aria-describedby="aaaabbbb-cccc-dddd-eeee-ffffffffffff"
                    class="kong-card noBorder"
                    data-v-3bb7bf60=""
                  >
                    <!---->
                    <!---->
                    <div
                      class="k-card-content d-flex"
                      data-v-3bb7bf60=""
                    >
                      <div
                        class="k-card-body"
                        data-v-3bb7bf60=""
                        id="aaaabbbb-cccc-dddd-eeee-ffffffffffff"
                      >
                        <div
                          class="label-list__col-wrapper multi-col"
                          data-v-3bb7bf60=""
                        >
                          <div
                            data-v-3bb7bf60=""
                          >
                            <ul
                              data-v-3bb7bf60=""
                            >
                              <li
                                data-v-3bb7bf60=""
                              >
                                <h4
                                  data-v-3bb7bf60=""
                                >
                                  
                  type
                
                                </h4>
                                 
                                <p
                                  data-v-3bb7bf60=""
                                >
                                  
                  ZoneOverview
                
                                </p>
                              </li>
                              <li
                                data-v-3bb7bf60=""
                              >
                                <h4
                                  data-v-3bb7bf60=""
                                >
                                  
                  name
                
                                </h4>
                                 
                                <p
                                  data-v-3bb7bf60=""
                                >
                                  
                  cluster-1
                
                                </p>
                              </li>
                              <li
                                data-v-3bb7bf60=""
                              >
                                <h4
                                  data-v-3bb7bf60=""
                                >
                                  
                  Authentication Type
                
                                </h4>
                                 
                                <p
                                  data-v-3bb7bf60=""
                                >
                                  
                  dpToken
                
                                </p>
                              </li>
                            </ul>
                          </div>
                        </div>
                      </div>
                      <!---->
                    </div>
                  </section>
                </div>
                 
                <!---->
                 
                <!---->
                 
                <!---->
              </div>
            </div>
            <div
              aria-labelledby="insights-tab"
              class="tab-container"
              data-v-93b6f4ca=""
              id="panel-1"
              role="tabpanel"
              tabindex="0"
            >
              <!---->
            </div>
            <div
              aria-labelledby="config-tab"
              class="tab-container"
              data-v-93b6f4ca=""
              id="panel-2"
              role="tabpanel"
              tabindex="0"
            >
              <!---->
            </div>
            <div
              aria-labelledby="warnings-tab"
              class="tab-container"
              data-v-93b6f4ca=""
              id="panel-3"
              role="tabpanel"
              tabindex="0"
            >
              <!---->
            </div>
          </div>
           
          <div>
            <!---->
             
            <!---->
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ZonesView.vue renders snapshot when no multizone 1`] = `
<div>
  <div
    class="zones"
  >
    <section
      class="empty-state-wrapper"
      data-v-25517d95=""
    >
      <div
        class="empty-state-title"
        data-v-25517d95=""
      >
        <!---->
        <div
          class="k-empty-state-title-header mt-4 mb-4"
          data-v-25517d95=""
        >
          <span
            class="kong-icon kong-icon--centered kong-icon-dangerCircle"
            data-v-25517d95=""
            data-v-429cf642=""
          >
            <svg
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              
  
              <title>
                Danger
              </title>
              
  
              <path
                d="M0,8a8,8 0 1,0 16,0a8,8 0 1,0 -16,0"
                fill="#A3BBCC"
              />
              <path
                d="M9 11v2H7v-2h2zm0-8v6.5H7V3h2z"
                fill="none"
                id="preserveColor"
              />
              

            </svg>
            

          </span>
          
    Kuma is running in Standalone mode.
  
        </div>
      </div>
      <div
        class="empty-state-content"
        data-v-25517d95=""
      >
        <div
          class="k-empty-state-message mb-6"
          data-v-25517d95=""
        >
          <p
            data-v-25517d95=""
          >
            
      To access this page, you must be running in 
            <strong
              data-v-25517d95=""
            >
              Multi-Zone
            </strong>
             mode.
    
          </p>
        </div>
        <div
          class="k-empty-state-cta"
          data-v-25517d95=""
        >
          <a
            class="k-button medium rounded primary"
            data-v-25517d95=""
            data-v-6ae23500=""
            href="https://kuma.io/docs/latest/documentation/deployments/"
            target="_blank"
            type="button"
          >
            <!---->
            
      Learn More
    
            <!---->
          </a>
        </div>
      </div>
    </section>
  </div>
</div>
`;

exports[`ZonesView.vue renders zone insights 1`] = `
<div
  class="tab-container"
  data-testid="tab-container"
>
  <header
    class="tab__header"
  >
    <div>
      <h3>
         Zone: cluster-1
      </h3>
    </div>
     
    <div>
      <div
        data-testid="entity-url-control"
      >
        <div
          aria-controls="aaaabbbb-cccc-dddd-eeee-ffffffffffff"
          data-v-6b00e241=""
          id="aaaabbbb-cccc-dddd-eeee-ffffffffffff"
          role="button"
        >
          <button
            class="k-button small rounded outline"
            data-v-6ae23500=""
            data-v-6b00e241=""
            type="button"
          >
            <span
              class="kong-icon kong-icon-externalLink"
              data-v-429cf642=""
              data-v-6ae23500=""
            >
              <svg
                height="12"
                role="img"
                viewBox="0 0 12 12"
                width="12"
                xmlns="http://www.w3.org/2000/svg"
              >
                
  
                <title>
                  External Link
                </title>
                
  
                <path
                  d="M8.24308 1.5C7.83269 1.5 7.5 1.16710138 7.5.75c0-.41421356.33823-.75.74308-.75h3.00568C11.6666 0 12 .336341 12 .75123866v3.00567786C12 4.1673102 11.6671 4.5 11.25 4.5c-.41421 0-.75-.3382314-.75-.74308348V2.625L6.53246 6.59254c-.28982.2898217-.76955.2953689-1.06202.0029022l-.06588-.0658844c-.29098-.2909742-.29117-.7679483.0029-1.0620178L9.375 1.5H8.24308zm-6.74753 0C.67089 1.5 0 2.1695784 0 2.99554521v7.50890959C0 11.3291147.66958 12 1.49555 12h7.5089C9.82911 12 10.5 11.3304216 10.5 10.5044548V6.75H9v3.75H1.5V3h3.75V1.5H1.49555z"
                  fill="#A3BBCC"
                  fill-rule="evenodd"
                />
                

              </svg>
              

            </span>
            
        Copy URL
      
            <!---->
          </button>
          <transition-stub
            data-v-6b00e241=""
            name="fade"
          >
            <div
              class="k-popover"
              data-v-6b00e241=""
              id="aaaabbbb-cccc-dddd-eeee-ffffffffffff"
              role="region"
              style="width: 200px; max-width: 350px; max-height: auto; display: none;"
            >
              <!---->
              <div
                class="k-popover-content"
                data-v-6b00e241=""
              >
                <div>
                  <p>
                    URL copied to clipboard!
                  </p>
                </div>
              </div>
              <!---->
            </div>
          </transition-stub>
        </div>
      </div>
    </div>
  </header>
   
  <div
    class="tab__content-container"
  >
    <div
      class="k-tabs"
      data-v-93b6f4ca=""
    >
      <ul
        aria-label="ktabs"
        data-v-93b6f4ca=""
        role="tablist"
      >
        <li
          aria-controls="panel-0"
          aria-selected="false"
          class="tab-item"
          data-v-93b6f4ca=""
          id="overview-tab"
          role="tab"
          tabindex="0"
        >
          <a
            class="tab-link"
            data-v-93b6f4ca=""
          >
            Overview
          </a>
        </li>
        <li
          aria-controls="panel-1"
          aria-selected="true"
          class="tab-item active"
          data-v-93b6f4ca=""
          id="insights-tab"
          role="tab"
          tabindex="0"
        >
          <a
            class="tab-link"
            data-v-93b6f4ca=""
          >
            Zone Insights
          </a>
        </li>
        <li
          aria-controls="panel-2"
          aria-selected="false"
          class="tab-item"
          data-v-93b6f4ca=""
          id="config-tab"
          role="tab"
          tabindex="0"
        >
          <a
            class="tab-link"
            data-v-93b6f4ca=""
          >
            Config
          </a>
        </li>
        <li
          aria-controls="panel-3"
          aria-selected="false"
          class="tab-item"
          data-v-93b6f4ca=""
          id="warnings-tab"
          role="tab"
          tabindex="0"
        >
          <a
            class="tab-link"
            data-v-93b6f4ca=""
          >
            <span
              class="flex items-center with-warnings"
              data-v-93b6f4ca=""
            >
              <span
                class="kong-icon mr-1 kong-icon-warning"
                data-v-429cf642=""
                data-v-93b6f4ca=""
              >
                <svg
                  height="16"
                  role="img"
                  version="1.1"
                  viewBox="0 0 48 42"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                  xmlns:xlink="http://www.w3.org/1999/xlink"
                >
                  
  
                  <title>
                    Warning
                  </title>
                  
  
                  <g
                    fill="var(--black-75)"
                    fill-rule="evenodd"
                    id="Page-1"
                    stroke="none"
                    stroke-width="1"
                  >
                    
    
                    <g
                      id="icn-warning-64x"
                    >
                      
      
                      <path
                        d="M25.129733,2.64556484 C25.0166566,2.45204254 24.8546193,2.29069544 24.6593031,2.17754095 C24.0339615,1.81525556 23.2314423,2.02651215 22.8697255,2.64556484 L2.17517915,38.0628158 C2.06036961,38.2593042 2,38.4821557 2,38.7088951 C2,39.4200371 2.58244376,40 3.30518292,40 L44.6942755,40 C44.9262204,40 45.1538685,39.9388552 45.3538494,39.8229983 C45.9741835,39.4636139 46.1830669,38.6768553 45.8242793,38.0628158 L25.129733,2.64556484 Z M26.8565586,1.63656862 L47.5511049,37.0538196 C48.4690879,38.6248825 47.9342141,40.6394832 46.3564308,41.5535561 C45.8517121,41.8459599 45.2782053,42 44.6942755,42 L3.30518292,42 C1.4797808,42 3.66949018e-16,40.5265221 0,38.7088951 C0,38.1274525 0.154699044,37.5563885 0.448353557,37.0538196 L21.1428999,1.63656862 C22.0608829,0.0655056975 24.0841012,-0.467089888 25.6618845,0.446983085 C26.1568841,0.733756171 26.5685588,1.14367738 26.8565586,1.63656862 Z"
                        fill="var(--black-75)"
                        fill-rule="nonzero"
                        id="Triangle"
                      />
                      
      
                      <path
                        d="M25.129733,2.64556484 C25.0166566,2.45204254 24.8546193,2.29069544 24.6593031,2.17754095 C24.0339615,1.81525556 23.2314423,2.02651215 22.8697255,2.64556484 L2.17517915,38.0628158 C2.06036961,38.2593042 2,38.4821557 2,38.7088951 C2,39.4200371 2.58244376,40 3.30518292,40 L44.6942755,40 C44.9262204,40 45.1538685,39.9388552 45.3538494,39.8229983 C45.9741835,39.4636139 46.1830669,38.6768553 45.8242793,38.0628158 L25.129733,2.64556484 Z"
                        fill="var(--yellow-300)"
                        fill-rule="nonzero"
                        id="Path"
                        type="secondary"
                      />
                      
      
                      <path
                        d="M23,13 L25,13 C25.5522847,13 26,13.4477153 26,14 C26,16 26,18 26,20 C26,22.6594889 25.7904331,25.0570193 25.3712994,27.192591 C25.2792336,27.6616739 24.8680521,28 24.3900199,28 L23.6099609,27.9999816 C23.1319364,27.9999816 22.7207615,27.6616608 22.6286994,27.1925851 C22.2095665,25.0570148 22,22.6594864 22,20 C22,18 22,16 22,14 C22,13.4477153 22.4477153,13 23,13 Z M24,31 C25.1045695,31 26,31.8954305 26,33 C26,34.1045695 25.1045695,35 24,35 C22.8954305,35 22,34.1045695 22,33 C22,31.8954305 22.8954305,31 24,31 Z"
                        fill="var(--black-75)"
                        id="!"
                      />
                      
    
                    </g>
                    
  
                  </g>
                  

                </svg>
                

              </span>
               
              <span
                data-v-93b6f4ca=""
              >
                
            Warnings
          
              </span>
            </span>
          </a>
        </li>
      </ul>
      <div
        aria-labelledby="overview-tab"
        class="tab-container"
        data-v-93b6f4ca=""
        id="panel-0"
        role="tabpanel"
        tabindex="0"
      >
        <!---->
      </div>
      <div
        aria-labelledby="insights-tab"
        class="tab-container"
        data-v-93b6f4ca=""
        id="panel-1"
        role="tabpanel"
        tabindex="0"
      >
        <section
          aria-describedby="aaaabbbb-cccc-dddd-eeee-ffffffffffff"
          class="kong-card noBorder"
          data-v-3bb7bf60=""
          data-v-93b6f4ca=""
        >
          <!---->
          <!---->
          <div
            class="k-card-content d-flex"
            data-v-3bb7bf60=""
          >
            <div
              class="k-card-body"
              data-v-3bb7bf60=""
              id="aaaabbbb-cccc-dddd-eeee-ffffffffffff"
            >
              <ul
                class="accordion"
                data-v-3bb7bf60=""
              >
                <li
                  class="relative border-b py-2 active"
                >
                  <button
                    aria-expanded="true"
                    class="accordion-item-header"
                  >
                    <h4
                      class="text-lg font-medium"
                    >
                      <span
                        class="color-green-400"
                      >
                        
    Connect time: 2021-02-19T07:11:15.535286Z
  
                      </span>
                       
                      <!---->
                    </h4>
                  </button>
                   
                  <transition-stub
                    name="accordion"
                  >
                    <div
                      class="px-4"
                    >
                      <div>
                        <div>
                          <h5
                            class="overview-tertiary-title"
                          >
                            
      General Information:
    
                          </h5>
                           
                          <ul>
                            <li>
                              <strong>
                                Global Instance ID:
                              </strong>
                               
        
                              <span
                                class="mono"
                              >
                                MacBook-Pro-Bartlomiej.local-9e52
                              </span>
                            </li>
                             
                            <!---->
                             
                            <li>
                              <strong>
                                Last Connected:
                              </strong>
                               
        2021-02-19T07:11:15.535286Z
      
                            </li>
                             
                            <!---->
                          </ul>
                        </div>
                         
                        <div>
                          <ul
                            class="overview-stat-grid"
                          >
                            <li>
                              <h6
                                class="overview-tertiary-title"
                              >
                                
          Circuit Breaker:
        
                              </h6>
                               
                              <ul>
                                <li>
                                  <strong>
                                    Responses Sent:
                                  </strong>
                                   
            
                                  <span
                                    class="mono"
                                  >
                                    1
                                  </span>
                                </li>
                                <li>
                                  <strong>
                                    Responses Acknowledged:
                                  </strong>
                                   
            
                                  <span
                                    class="mono"
                                  >
                                    1
                                  </span>
                                </li>
                              </ul>
                            </li>
                            <li>
                              <h6
                                class="overview-tertiary-title"
                              >
                                
          Config:
        
                              </h6>
                               
                              <ul>
                                <li>
                                  <strong>
                                    Responses Sent:
                                  </strong>
                                   
            
                                  <span
                                    class="mono"
                                  >
                                    1
                                  </span>
                                </li>
                                <li>
                                  <strong>
                                    Responses Acknowledged:
                                  </strong>
                                   
            
                                  <span
                                    class="mono"
                                  >
                                    1
                                  </span>
                                </li>
                              </ul>
                            </li>
                            <li>
                              <h6
                                class="overview-tertiary-title"
                              >
                                
          Dataplane:
        
                              </h6>
                               
                              <ul>
                                <li>
                                  <strong>
                                    Responses Sent:
                                  </strong>
                                   
            
                                  <span
                                    class="mono"
                                  >
                                    1
                                  </span>
                                </li>
                                <li>
                                  <strong>
                                    Responses Acknowledged:
                                  </strong>
                                   
            
                                  <span
                                    class="mono"
                                  >
                                    1
                                  </span>
                                </li>
                              </ul>
                            </li>
                            <li>
                              <h6
                                class="overview-tertiary-title"
                              >
                                
          External Service:
        
                              </h6>
                               
                              <ul>
                                <li>
                                  <strong>
                                    Responses Sent:
                                  </strong>
                                   
            
                                  <span
                                    class="mono"
                                  >
                                    1
                                  </span>
                                </li>
                                <li>
                                  <strong>
                                    Responses Acknowledged:
                                  </strong>
                                   
            
                                  <span
                                    class="mono"
                                  >
                                    1
                                  </span>
                                </li>
                              </ul>
                            </li>
                            <li>
                              <h6
                                class="overview-tertiary-title"
                              >
                                
          Fault Injection:
        
                              </h6>
                               
                              <ul>
                                <li>
                                  <strong>
                                    Responses Sent:
                                  </strong>
                                   
            
                                  <span
                                    class="mono"
                                  >
                                    1
                                  </span>
                                </li>
                                <li>
                                  <strong>
                                    Responses Acknowledged:
                                  </strong>
                                   
            
                                  <span
                                    class="mono"
                                  >
                                    1
                                  </span>
                                </li>
                              </ul>
                            </li>
                            <li>
                              <h6
                                class="overview-tertiary-title"
                              >
                                
          Health Check:
        
                              </h6>
                               
                              <ul>
                                <li>
                                  <strong>
                                    Responses Sent:
                                  </strong>
                                   
            
                                  <span
                                    class="mono"
                                  >
                                    1
                                  </span>
                                </li>
                                <li>
                                  <strong>
                                    Responses Acknowledged:
                                  </strong>
                                   
            
                                  <span
                                    class="mono"
                                  >
                                    1
                                  </span>
                                </li>
                              </ul>
                            </li>
                            <li>
                              <h6
                                class="overview-tertiary-title"
                              >
                                
          Mesh:
        
                              </h6>
                               
                              <ul>
                                <li>
                                  <strong>
                                    Responses Sent:
                                  </strong>
                                   
            
                                  <span
                                    class="mono"
                                  >
                                    1
                                  </span>
                                </li>
                                <li>
                                  <strong>
                                    Responses Acknowledged:
                                  </strong>
                                   
            
                                  <span
                                    class="mono"
                                  >
                                    1
                                  </span>
                                </li>
                              </ul>
                            </li>
                            <li>
                              <h6
                                class="overview-tertiary-title"
                              >
                                
          Proxy Template:
        
                              </h6>
                               
                              <ul>
                                <li>
                                  <strong>
                                    Responses Sent:
                                  </strong>
                                   
            
                                  <span
                                    class="mono"
                                  >
                                    1
                                  </span>
                                </li>
                                <li>
                                  <strong>
                                    Responses Acknowledged:
                                  </strong>
                                   
            
                                  <span
                                    class="mono"
                                  >
                                    1
                                  </span>
                                </li>
                              </ul>
                            </li>
                            <li>
                              <h6
                                class="overview-tertiary-title"
                              >
                                
          Retry:
        
                              </h6>
                               
                              <ul>
                                <li>
                                  <strong>
                                    Responses Sent:
                                  </strong>
                                   
            
                                  <span
                                    class="mono"
                                  >
                                    1
                                  </span>
                                </li>
                                <li>
                                  <strong>
                                    Responses Acknowledged:
                                  </strong>
                                   
            
                                  <span
                                    class="mono"
                                  >
                                    1
                                  </span>
                                </li>
                              </ul>
                            </li>
                            <li>
                              <h6
                                class="overview-tertiary-title"
                              >
                                
          Secret:
        
                              </h6>
                               
                              <ul>
                                <li>
                                  <strong>
                                    Responses Sent:
                                  </strong>
                                   
            
                                  <span
                                    class="mono"
                                  >
                                    1
                                  </span>
                                </li>
                                <li>
                                  <strong>
                                    Responses Acknowledged:
                                  </strong>
                                   
            
                                  <span
                                    class="mono"
                                  >
                                    1
                                  </span>
                                </li>
                              </ul>
                            </li>
                            <li>
                              <h6
                                class="overview-tertiary-title"
                              >
                                
          Traffic Log:
        
                              </h6>
                               
                              <ul>
                                <li>
                                  <strong>
                                    Responses Sent:
                                  </strong>
                                   
            
                                  <span
                                    class="mono"
                                  >
                                    1
                                  </span>
                                </li>
                                <li>
                                  <strong>
                                    Responses Acknowledged:
                                  </strong>
                                   
            
                                  <span
                                    class="mono"
                                  >
                                    1
                                  </span>
                                </li>
                              </ul>
                            </li>
                            <li>
                              <h6
                                class="overview-tertiary-title"
                              >
                                
          Traffic Permission:
        
                              </h6>
                               
                              <ul>
                                <li>
                                  <strong>
                                    Responses Sent:
                                  </strong>
                                   
            
                                  <span
                                    class="mono"
                                  >
                                    1
                                  </span>
                                </li>
                                <li>
                                  <strong>
                                    Responses Acknowledged:
                                  </strong>
                                   
            
                                  <span
                                    class="mono"
                                  >
                                    1
                                  </span>
                                </li>
                              </ul>
                            </li>
                            <li>
                              <h6
                                class="overview-tertiary-title"
                              >
                                
          Traffic Route:
        
                              </h6>
                               
                              <ul>
                                <li>
                                  <strong>
                                    Responses Sent:
                                  </strong>
                                   
            
                                  <span
                                    class="mono"
                                  >
                                    1
                                  </span>
                                </li>
                                <li>
                                  <strong>
                                    Responses Acknowledged:
                                  </strong>
                                   
            
                                  <span
                                    class="mono"
                                  >
                                    1
                                  </span>
                                </li>
                              </ul>
                            </li>
                            <li>
                              <h6
                                class="overview-tertiary-title"
                              >
                                
          Traffic Trace:
        
                              </h6>
                               
                              <ul>
                                <li>
                                  <strong>
                                    Responses Sent:
                                  </strong>
                                   
            
                                  <span
                                    class="mono"
                                  >
                                    1
                                  </span>
                                </li>
                                <li>
                                  <strong>
                                    Responses Acknowledged:
                                  </strong>
                                   
            
                                  <span
                                    class="mono"
                                  >
                                    1
                                  </span>
                                </li>
                              </ul>
                            </li>
                          </ul>
                        </div>
                      </div>
                    </div>
                  </transition-stub>
                </li>
                <li
                  class="relative border-b py-2"
                >
                  <button
                    class="accordion-item-header"
                  >
                    <h4
                      class="text-lg font-medium"
                    >
                      <span
                        class="color-green-400"
                      >
                        
    Connect time: 2020-07-28T16:18:09.743141Z
  
                      </span>
                       
                      <span
                        class="ml-4 color-red-400"
                      >
                        
    Disconnect time: 2020-07-28T16:18:09.743194Z
  
                      </span>
                    </h4>
                  </button>
                   
                  <transition-stub
                    name="accordion"
                  >
                    <!---->
                  </transition-stub>
                </li>
              </ul>
            </div>
            <!---->
          </div>
        </section>
      </div>
      <div
        aria-labelledby="config-tab"
        class="tab-container"
        data-v-93b6f4ca=""
        id="panel-2"
        role="tabpanel"
        tabindex="0"
      >
        <!---->
      </div>
      <div
        aria-labelledby="warnings-tab"
        class="tab-container"
        data-v-93b6f4ca=""
        id="panel-3"
        role="tabpanel"
        tabindex="0"
      >
        <!---->
      </div>
    </div>
     
    <div>
      <!---->
       
      <!---->
    </div>
  </div>
</div>
`;
